--- a/index.html
+++ b/index.html
@@ -31,35 +31,142 @@
     	<div class="item"><h4>1</h4></div>
 	</div>
 --> 
-  <header class="custom-header py-xl-3 py-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
+  <header class="custom-header">
           <div class="header-top">
-            <div class="row">
-              <div class="col-md-6 col-sm-6 align-self-center">
-                <div class="header-top-left">
-                  <ul>
-                    <li><a href="#">Become a Supplier</a></li>
-                    <li><span>Download App</span><a class="top-left-icon" href="#"><i
-                          class="fab fa-google-play"></i></a><a class="top-left-icon" href="#"><i
-                          class="fab fa-apple"></i></a></li>
-                  </ul>
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6 col-sm-6 align-self-center">
+                  <div class="header-top-left">
+                    <ul>
+                      <li><a href="#">Become a Supplier</a></li>
+                      <li><span>Download App</span><a class="top-left-icon" href="#"><i
+                            class="fab fa-google-play"></i></a><a class="top-left-icon" href="#"><i
+                            class="fab fa-apple"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-6 align-self-center">
+                  <div class="header-top-right">
+                    <ul>
+                      <li><span>Need help? Call Us: <a href="tel:903-435-7394">903-435-7394</a></span></li>
+                      <li><a class="live-chat" href="#"><i class="far fa-user"></i><span>Live Chat Support</span></a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 align-self-center">
-                <div class="header-top-right">
-                  <ul>
-                    <li><span>Need help? Call Us: <a href="tel:903-435-7394">903-435-7394</a></span></li>
-                    <li><a class="live-chat" href="#"><i class="far fa-user"></i><span>Live Chat Support</span></a></li>
-                  </ul>
+            </div>
+            
+          </div>
+          <div class="header-middle">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-3 align-self-center">
+                  <div class="logo-main-desktop">
+                    <a class="logo-nmk" href="#">
+                      <img src="images/logo.webp" alt="">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-lg-5 align-self-center">
+                  <div class="header-search">
+                    <div class="search-wrap-custom">                      
+                      <form class="cus-search-form">
+                        <div class="dropdown">
+                          <button class="dropdown-toggle nmk-search-drop" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            All Categoriess
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Category 1</a></li>
+                            <li><a class="dropdown-item" href="#">Category 2</a></li>
+                            <li><a class="dropdown-item" href="#">Category 3</a></li>
+                            <li><a class="dropdown-item" href="#">Category 4</a></li>
+                            <li><a class="dropdown-item" href="#">Category 5</a></li>
+                            <li><a class="dropdown-item" href="#">Category 6</a></li>
+                          </ul>
+                        </div>
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="search-submit" type="submit"><i class="las la-search"></i></button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 align-self-center">
+                  <div class="header-middle-right">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <span><i class="lar la-heart"></i></span>
+                          <p>Wishlist</p>
+                        </a>                        
+                      </li>
+                      <li>
+                        <a href="#">
+                          <span><i class="las la-shopping-cart"></i></span>
+                          <p>My Cart <span class="cart-count">(0)</span></p>
+                        </a>                        
+                      </li>
+                      <li>
+                        <a href="#">
+                          <span><i class="las la-user"></i></span>
+                          <p>Login/Sign up</p>
+                        </a>                        
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+      <div class="header-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="category-button-nmk">
+                <ul>
+                  <li><a href="#">Browse All Categories</a>
+                    <ul>
+                      <li><a href="#">new Market kart Category 1</a></li>
+                      <li><a href="#">new Market kart Category 2</a></li>
+                      <li><a href="#">new Market kart Category 3</a></li>
+                      <li><a href="#">new Market kart Category 4</a></li>
+                      <li><a href="#">new Market kart Category 5</a></li>
+                      <li><a href="#">new Market kart Category 6</a></li>
+                      <li><a href="#">new Market kart Category 7</a></li>
+                      <li><a href="#">new Market kart Category 8</a></li>
+                      <li><a href="#">new Market kart Category 9</a></li>
+                      <li><a href="#">new Market kart Category 10</a></li>
+                      <li><a href="#">new Market kart Category 11</a></li>
+                      <li><a href="#">new Market kart Category 12</a></li>
+                      <li><a href="#">new Market kart Category 13</a></li>
+                      <li><a href="#">new Market kart Category 14</a></li>
+                      <li><a href="#">new Market kart Category 15</a></li>
+                      <li><a href="#">new Market kart Category 16</a></li>
+                      <li><a href="#">new Market kart Category 17</a></li>
+                      <li><a href="#">new Market kart Category 18</a></li>
+                      <li><a href="#">new Market kart Category 19</a></li>
+                      <li><a href="#">new Market kart Category 20</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="nmk-quick-deals">
+                <ul>
+                  <li><a href="#"></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-4">
+
+            </div>
+            <div class="col-lg-2">
+
+            </div>
+          </div>
         </div>
       </div>
-      <nav class="navbar navbar-expand-lg py-0">
+      <!-- <nav class="navbar navbar-expand-lg py-0">
         <a class="navbar-brand ms-0 py-0" href="#">LOGO HERE</a>
         <div class="navbar-header me-0">
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -87,8 +194,8 @@
             </li>
           </ul>
         </div>
-      </nav>
-    </div>
+      </nav> -->
+
   </header>
 
   <section class="banner">
